--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+
+<head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>GW EINSTEIN</title>
+    <title>Home - Brand</title>
     <meta name="description" content="GW EINSTEIN">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -17,175 +18,119 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <link rel="stylesheet" href="assets/css/Social-Icons.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-      <div class="container"><a class="navbar-brand logo" href="#">GW
-          EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span
-
-            class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item" role="presentation"><a class="nav-link active"
-
-                href="index.html">Home</a></li>
-            <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
-            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
-            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
-            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC</a></li>
-            <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact
-                with us</a></li>
-            <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About
-                  us</strong></a></li>
-          </ul>
+        <div class="container"><a class="navbar-brand logo" href="#">GW EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse"
+                id="navbarNav">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org" target="_blank">LSC</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu" target="_blank">LIGO</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/" target="_blank">GWOSC<br></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
     <main class="page lanidng-page">
-      <section class="portfolio-block block-intro">
-        <div class="container"><img class="bounce animated" src="assets/img/PngItem_2522307.png"
-
-            style="width: 145px;">
-          <div class="about-me">
-            <p class="bounce animated" style="font-family: 'Bigshot One', cursive;"><br>
-              <strong><span style="text-decoration: underline;">Project:</span></strong><br>
-              <strong><span style="text-decoration: underline;"> "GW EINSTEIN"</span></strong><br>
-              SEARCH FOR GRAVITATIONAL WAVES<br>
-              GAMMA RAYS - SUPERNOVA&nbsp; AND<br>
-              ELECTROMAGNETIC EMISSION<br>
-            </p>
-          </div>
-        </div>
-        <p class="bounce animated" style="font-family: 'Abril Fatface', cursive;">Team
-          "La NASA en tu patio trasero"<br>
-          Members Team Victoria Lomanto - Walter Wagner<br>
-          Outstanding events<br>
-          Data Hub</p>
-        <img src="assets/img/Logo.png"></section>
-      <section class="portfolio-block photography">
-        <div class="container">
-          <div class="row no-gutters">
-            <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image"
-
-                  src="assets/img/1.jpg" style="width: 565px;height: 307px;"></a></div>
-            <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image"
-
-                  src="assets/img/41586_2019_1129_Fig1_HTML.png" style="height: 309px;width: 550px;"></a></div>
-            <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image"
-
-                  src="assets/img/d41586-019-00573-4_16480554.jpg" style="height: 308px;width: 560px;"></a></div>
-          </div>
-        </div>
-      </section>
-      <section class="portfolio-block call-to-action border-bottom">
-        <div class="container">
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Search</th>
-                  <th><input type="search"></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                </tr>
-                <tr>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="container text-center"><a class="btn btn-primary" role="button"
-
-            href="games.html">Download App</a>
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th class="text-center"><a class="btn btn-primary" role="button"
-
-                      data-bs-hover-animate="shake" href="catalague.html">View
-                      Catalogue</a></th>
-                  <th class="text-center"><a class="btn btn-primary" role="button"
-
-                      data-bs-hover-animate="shake" href="games.html">Games Soon</a></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                </tr>
-                <tr>
-                  <td><br>
-                  </td>
-                  <td><br>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <section class="portfolio-block photography">
-          <div class="container">
-            <div class="row no-gutters">
-              <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img
-
-                    class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 568px;height: 307px;"></a></div>
-              <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img
-
-                    class="img-fluid image" src="assets/img/unnamed.jpg" style="height: 309px;"></a></div>
-              <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img
-
-                    class="img-fluid image" src="assets/img/rayos-gamma_0.jpg" style="height: 308px;width: 561px;"></a></div>
+        <section class="portfolio-block block-intro">
+            <div class="container"><img class="bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
+                <div class="about-me">
+                    <p class="bounce animated" style="font-family: 'Bigshot One', cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
+                        RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
+                </div>
             </div>
-          </div>
-        </section>
+            <p class="bounce animated" style="font-family: 'Abril Fatface', cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img src="assets/img/Logo.png"></section>
         <section class="portfolio-block photography">
-          <div class="container">
-            <div class="row no-gutters">
-              <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img
-
-                    class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 307px;"></a></div>
-              <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img
-
-                    class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
-              <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img
-
-                    class="img-fluid image" src="assets/img/Logo.png" style="height: 310px;width: 517px;"></a></div>
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1.jpg" style="width: 565px;height: 307px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/41586_2019_1129_Fig1_HTML.png" style="height: 309px;width: 550px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/d41586-019-00573-4_16480554.jpg" style="height: 308px;width: 560px;"></a></div>
+                </div>
             </div>
-          </div>
         </section>
-      </section>
-      <section class="portfolio-block skills">
-        <div class="container">
-          <div class="heading"></div>
-          <h3 class="text-center" data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS
-              EXTERNAL INFORMATION</strong></h3>
-        </div>
-        <div class="container">
-          <div class="heading"></div>
-        </div>
-        <div class="container text-center"><a class="btn btn-primary" role="button"
-
-            style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
-      </section>
+        <section class="portfolio-block call-to-action border-bottom">
+            <div class="container">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Search</th>
+                                <th><input type="search"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr></tr>
+                            <tr></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" href="games.html">Download App</a>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html">View Catalogue</a></th>
+                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html">Games Soon</a></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr></tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <section class="portfolio-block photography">
+                <div class="container">
+                    <div class="row no-gutters">
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 568px;height: 307px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/unnamed.jpg" style="height: 309px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rayos-gamma_0.jpg" style="height: 308px;width: 561px;"></a></div>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio-block photography">
+                <div class="container">
+                    <div class="row no-gutters">
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 307px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/Logo.png" style="height: 310px;width: 517px;"></a></div>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <section class="portfolio-block skills">
+            <div class="container">
+                <div class="heading"></div>
+                <h3 class="text-center" data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
+            </div>
+            <div class="container">
+                <div class="heading"></div>
+            </div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
+        </section>
     </main>
     <section class="portfolio-block website gradient">
-      <div class="container text-center"><img data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
-      <div></div>
+        <div class="container text-center"><img data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
+        <div></div>
     </section>
-    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a
-
-        href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
-
-        href="#"><i class="icon ion-social-youtube"></i></a></div>
+    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
     <footer class="page-footer">
-      <div class="container">
-        <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About
-            us</a></div>
-        <a href="contact.html">Contact with us</a>
-        <div class="social-icons"></div>
-      </div>
+        <div class="container">
+            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
+            <div class="social-icons"></div>
+        </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -193,5 +138,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
-  </body>
+</body>
+
 </html>
