--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alex+Brush">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arizonia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bigshot+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sriracha">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
@@ -41,11 +42,11 @@
         <section class="portfolio-block block-intro">
             <div class="container"><img class="bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
                 <div class="about-me">
-                    <p class="bounce animated" style="font-family: 'Bigshot One', cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
+                    <p class="bounce animated" style="font-family: Sriracha, cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
-            <p class="bounce animated" style="font-family: 'Abril Fatface', cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img src="assets/img/Logo.png"></section>
+            <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img src="assets/img/Logo.png"></section>
         <section class="portfolio-block photography">
             <div class="container">
                 <div class="row no-gutters">
