--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -42,7 +42,7 @@
         <section class="portfolio-block block-intro">
             <div class="container"><img class="bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
                 <div class="about-me">
-                    <p class="bounce animated" style="font-family: Sriracha, cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
+                    <p class="bounce animated" style="font-family: Sriracha, cursive;"><br><strong><span style="text-decoration: underline;">Project</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
@@ -56,14 +56,14 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio-block call-to-action border-bottom">
+        <section class="portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;">
             <div class="container">
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>Search</th>
-                                <th><input type="search"></th>
+                                <th><input type="search" style="width: 1002px;"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -119,7 +119,7 @@
             <div class="container">
                 <div class="heading"></div>
             </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
+            <div class="container text-center" style="font-family: Sriracha, cursive;"><a class="btn btn-primary" role="button" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
         </section>
     </main>
     <section class="portfolio-block website gradient">
@@ -128,7 +128,7 @@
     </section>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
     <footer class="page-footer">
-        <div class="container">
+        <div class="container" style="font-family: Sriracha, cursive;">
             <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
