--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -62,8 +62,8 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>Search</th>
-                                <th><input type="search" style="width: 1002px;"></th>
+                                <th style="width: 224px;">Search information</th>
+                                <th class="text-center" style="width: 971px;"><input type="search" style="width: 900px;"></th>
                             </tr>
                         </thead>
                         <tbody>
