--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -114,7 +114,7 @@
         <section class="portfolio-block skills">
             <div class="container">
                 <div class="heading"></div>
-                <h3 class="text-center" data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
+                <h3 class="text-center" data-aos="zoom-out" style="font-family: Sriracha, cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
             </div>
             <div class="container">
                 <div class="heading"></div>
