--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -40,14 +40,14 @@
     </nav>
     <main class="page lanidng-page">
         <section class="portfolio-block block-intro">
-            <div class="container"><img class="bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
+            <div class="container"><img class="shadow bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
                 <div class="about-me">
                     <p class="bounce animated" style="font-family: Sriracha, cursive;"><br><strong><span style="text-decoration: underline;">Project</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
             <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img src="assets/img/Logo.png"></section>
-        <section class="portfolio-block photography">
+        <section class="shadow portfolio-block photography">
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 565px;height: 307px;"></a></div>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </section>
-            <section class="portfolio-block photography">
+            <section class="shadow portfolio-block photography">
                 <div class="container">
                     <div class="row no-gutters">
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 307px;"></a></div>
@@ -123,7 +123,7 @@
         </section>
     </main>
     <section class="portfolio-block website gradient">
-        <div class="container text-center"><img data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
+        <div class="container text-center"><img class="shadow" data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
         <div></div>
     </section>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
