--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -126,7 +126,10 @@
         <div class="container text-center"><img class="shadow" data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
         <div></div>
     </section>
-    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
+    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter" data-bs-hover-animate="bounce"></i></a><a href="#"><i class="icon ion-social-facebook" data-bs-hover-animate="bounce"></i></a><a href="#"><i class="icon ion-social-snapchat" data-bs-hover-animate="bounce"></i></a>
+        <a
+            href="#"><i class="icon ion-social-youtube" data-bs-hover-animate="bounce"></i></a>
+    </div>
     <footer class="page-footer">
         <div class="container" style="font-family: Sriracha, cursive;">
             <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
