--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img class="shadow" src="assets/img/Logo.png">
-            <div class="container"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315"></iframe></div>
+            <div class="container"><iframe class="shadow" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315"></iframe></div>
         </section>
         <section class="shadow portfolio-block photography">
             <div class="container">
