--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -50,7 +50,7 @@
             <div class="container">
                 <p></p>
             </div>
-            <div class="container"><iframe class="shadow" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315"></iframe></div>
+            <div class="container text-center"><iframe class="shadow" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315"></iframe></div>
         </section>
         <section class="shadow portfolio-block photography">
             <div class="container">
