--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -53,7 +53,7 @@
             <div class="container text-center"><iframe class="shadow" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315"></iframe></div>
         </section>
         <section class="shadow portfolio-block photography">
-            <div class="container">
+            <div class="container text-center">
                 <div class="row no-gutters">
                     <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 514px;height: 309px;"></a></div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/41586_2019_1129_Fig1_HTML.png" style="height: 309px;width: 550px;"></a></div>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <section class="portfolio-block photography">
-                <div class="container">
+                <div class="container text-center">
                     <div class="row no-gutters">
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 568px;height: 309px;"></a></div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/unnamed.jpg" style="height: 309px;"></a></div>
@@ -107,7 +107,7 @@
                 </div>
             </section>
             <section class="shadow portfolio-block photography">
-                <div class="container">
+                <div class="container text-center">
                     <div class="row no-gutters">
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 309px;"></a></div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
