--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -133,7 +133,7 @@
     </section>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter" data-bs-hover-animate="bounce"></i></a><a href="#"><i class="icon ion-social-facebook" data-bs-hover-animate="bounce"></i></a><a href="#"><i class="icon ion-social-snapchat" data-bs-hover-animate="bounce"></i></a>
         <a
-            href="#"><i class="icon ion-social-youtube" data-bs-hover-animate="bounce"></i></a>
+            href="https://www.youtube.com/watch?v=21X5lGlDOfg"><i class="icon ion-social-youtube" data-bs-hover-animate="bounce"></i></a>
     </div>
     <footer class="page-footer">
         <div class="container" style="font-family: Sriracha, cursive;">
