--- a/eventapi/html/allevents/games.html
+++ b/eventapi/html/allevents/games.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alex+Brush">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arizonia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bigshot+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sriracha">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
@@ -22,9 +23,9 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">GW EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navbarNav">
+        <div class="container"><a class="navbar-brand logo" href="#" style="font-family: 'Bigshot One', cursive;"><strong>GW EINSTEIN</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navbarNav" style="font-family: Sriracha, cursive;">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
@@ -34,7 +35,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
                 </ul>
-            </div>
+        </div>
         </div>
     </nav>
     <main class="page contact-page">
@@ -46,12 +47,12 @@
             </div>
             <div class="container text-center"><button class="btn btn-primary" type="button" style="font-size: 32px;">Play Now</button></div>
             <div class="container">
-                <p>Paragraph</p>
+                <p></p>
             </div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
     <footer class="page-footer">
-        <div class="container">
+        <div class="container" style="font-family: Sriracha, cursive;">
             <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
